Mudanças no conheça mais da empresa

--- a/meu site/index.html
+++ b/meu site/index.html
@@ -20,11 +20,11 @@
                 <a class="nav-link active" aria-current="page" href="#sobre">Sobre</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">Mais</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Link
+                  Mais
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Action</a></li>
@@ -34,7 +34,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Link</a>
+                <a class="nav-item disabled" aria-disabled="true">Mais</a>
               </li>
             </ul>
             <form class="d-flex" role="procurar">
@@ -74,31 +74,31 @@
           <div class="row">
             <div class="col">
               <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="img/images (2).jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Equipamentos</h5>
+                  <p class="card-text">Nossos equipamentos são de primeira linha, sempre mantemos cuidado com todos os dispositivos. Para que nossa empresa cresça cada vez mais precisamos de equipamentos de linha portanto nossa empresa oferece os melhores equipamentos.</p>
+                  <a href="#" class="btn btn-primary">Voltar</a>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="img/20230222_liberdade_autonomia_materia.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Dentro de Nossas Instalções</h5>
+                  <p class="card-text">Dentr de nossas instalações mantemos um ambiente moderno e agradável para que todas possam relaxar, sempre um ambiente limpo e calmo, para que nossos clientes e funcionários possam usufluir de toda nossa estrutura.</p>
+                  <a href="#" class="btn btn-primary">Voltar</a>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="img/images.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Nossa Equipe</h5>
+                  <p class="card-text">Nossa equipe está sempre unida, trabalhos todos igual um. O maior objetivo da nossa equipe é atingir nossas metas e semper manter a igualdade e respeito ao seu colega de trabalho, assim mantendo um anbiente agradável no trabalho.</p>
+                  <a href="#" class="btn btn-primary">Voltar</a>
                 </div>
               </div>
             </div>
