--- a/meu site/index.html
+++ b/meu site/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mateus Filassi</title>
+    <title>Filassi</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 </head>
@@ -17,7 +17,7 @@
           <div class="collapse navbar-collapse" id="navbarScroll">
             <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#sobre">Sobre</a>
+                <a class="nav-link active" aria-current="page" href="#sobre">Sobre nossa empresas</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Mais</a>
@@ -27,10 +27,10 @@
                   Mais
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">Ações</a></li>
+                  <li><a class="dropdown-item" href="#">Trabalhe com a gente</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="#">Ajuda</a></li>
                 </ul>
               </li>
               <li class="nav-item">
@@ -47,13 +47,13 @@
       <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/1.jpeg" class="d-block w-100" alt="...">
+            <img src="img/fachada_empresa_moderna.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/2.jpeg" class="d-block w-100" alt="...">
+            <img src="img/visao-da-ia-generativa-de-grandes-empresas-modernas_849906-20805.avif" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/3.jpeg" class="d-block w-100" alt="...">
+            <img src="img/empresa-da-nova-economia.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -69,7 +69,7 @@
       <section id="sobre">
       <div class="container">
         <div class="container text-center">
-          <h1 class="text-center">"Sobre mim"</h1>
+          <h1 class="text-center">"Sobre nossas Empresas"</h1>
           <br>
           <div class="row">
             <div class="col">
