--- a/meu site/index.html
+++ b/meu site/index.html
@@ -33,9 +33,6 @@
                   <li><a class="dropdown-item" href="#">Ajuda</a></li>
                 </ul>
               </li>
-              <li class="nav-item">
-                <a class="nav-item disabled" aria-disabled="true">Mais</a>
-              </li>
             </ul>
             <form class="d-flex" role="procurar">
               <input class="form-control me-2" type="procurar" placeholder="procurar" aria-label="procurar">
@@ -50,10 +47,10 @@
             <img src="img/fachada_empresa_moderna.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/visao-da-ia-generativa-de-grandes-empresas-modernas_849906-20805.avif" class="d-block w-100" alt="...">
+            <img src="img/empresa-da-nova-economia.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/empresa-da-nova-economia.jpg" class="d-block w-100" alt="...">
+            <img src="img/imgg fundo" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -84,7 +81,7 @@
             </div>
             <div class="col">
               <div class="card" style="width: 18rem;">
-                <img src="img/20230222_liberdade_autonomia_materia.jpg" class="card-img-top" alt="...">
+                <img src="img/img.........jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Dentro de Nossas Instalções</h5>
                   <p class="card-text">Dentr de nossas instalações mantemos um ambiente moderno e agradável para que todas possam relaxar, sempre um ambiente limpo e calmo, para que nossos clientes e funcionários possam usufluir de toda nossa estrutura.</p>
